<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference android:title="@string/pref_spam_list_title" >
        <intent
            android:targetClass="cc.firebloom.sahara.SpamListActivity"
            android:targetPackage="cc.firebloom.sahara" />
    </Preference>

    <PreferenceCategory android:title="@string/pref_sender_category" >
        
        <Preference android:title="@string/title_activity_sender_black_list" >
            <intent
                android:targetClass="cc.firebloom.sahara.sender.BlackListActivity"
                android:targetPackage="cc.firebloom.sahara" />
        </Preference>
        
        <Preference android:title="@string/pref_pick_from_inbox" >
            <intent
                android:targetClass="cc.firebloom.sahara.sender.InboxActivity"
                android:targetPackage="cc.firebloom.sahara" />
        </Preference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_brief_title" >
        
        <Preference
            android:selectable="false"
            android:summary="@string/pref_brief_summary" />
        
        <Preference android:title="@string/pref_go_to_project" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/snow/sahara" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>